syntax = "proto3";

package home.app.grpc;

import "household_message.proto";
import "transaction_message.proto";

option java_multiple_files = true;

message HouseholdRequest {
  string owner = 1;
}

message EditHouseholdRequest {
  int64 id = 1;
  double balance = 2;
}

message HouseholdResponse {
  HouseholdMessage household = 1;
}

message TransactionsRequest {
  int64 household_id = 1;
}

message TransactionResponse {
  TransactionMessage transaction = 1;
}

message CreateOrEditTransactionRequest {
  int64 household_id = 1;
  TransactionMessage transaction = 2;
}

message GetOrDeleteTransactionRequest {
  int64 transaction_id = 1;
}

message SuccessResponse {
  bool success = 1;
}

service HouseholdService {
  rpc GetHousehold(HouseholdRequest) returns (HouseholdResponse) {};
  rpc CreateHousehold(HouseholdRequest) returns (SuccessResponse) {};
  rpc EditHousehold(EditHouseholdRequest) returns (SuccessResponse) {};

  rpc GetTransactions(TransactionsRequest) returns (stream TransactionResponse) {};
  rpc GetTransaction(GetOrDeleteTransactionRequest) returns (TransactionResponse) {};
  rpc EditTransaction(CreateOrEditTransactionRequest) returns (SuccessResponse) {};
  rpc CreateTransaction(CreateOrEditTransactionRequest) returns (SuccessResponse) {};
  rpc DeleteTransaction(GetOrDeleteTransactionRequest) returns (SuccessResponse) {};
}
